--- a/notebooks/piper_multilingual_training_notebook.ipynb
+++ b/notebooks/piper_multilingual_training_notebook.ipynb
@@ -346,7 +346,7 @@
         "\n",
         "final_language = _get_language(language)\n",
         "#@markdown ### Choose a name for your model:\n",
-        "model_name = \"\" #@param {type:\"string\"}\n",
+        "model_name = \"AlijahTTS1\" #@param {type:\"string\"}\n",
         "#@markdown ---\n",
         "# output:\n",
         "#@markdown ### Choose the working folder: (recommended to save to Drive)\n",
@@ -423,7 +423,7 @@
         "#@markdown * The <font color=\"orange\">finetune</font> option is used to train a dataset using a pretrained model, that is, train on that data. This option is ideal if you want to train a very small dataset (more than five minutes recommended).\n",
         "#@markdown * The <font color=\"orange\">train from scratch</font> option builds features such as dictionary and speech form from scratch, and this may take longer to converge. For this, hours of audio (8 at least) are recommended, which have a large collection of phonemes.\n",
         "\n",
-        "action = \"finetune\" #@param [\"Continue training\", \"convert single-speaker to multi-speaker model\", \"finetune\", \"train from scratch\"]\n",
+        "action = \"Continue training\" #@param [\"Continue training\", \"convert single-speaker to multi-speaker model\", \"finetune\", \"train from scratch\"]\n",
         "#@markdown ---\n",
         "if action == \"Continue training\":\n",
         "    checkpoints = glob.glob(f\"{output_dir}/lightning_logs/**/checkpoints/last.ckpt\", recursive=True)\n",
@@ -480,7 +480,7 @@
         "else:\n",
         "    print(\"\\033[93mWarning: this model will be trained from scratch. You need at least 8 hours of data for everything to work decent. Good luck!\")\n",
         "#@markdown ### Choose batch size based on this dataset:\n",
-        "batch_size = 12 #@param {type:\"integer\"}\n",
+        "batch_size = 20 #@param {type:\"integer\"}\n",
         "#@markdown ---\n",
         "\n",
         "#@markdown ### Choose the quality for this model:\n",
@@ -492,23 +492,23 @@
         "#@markdown ---\n",
         "#@markdown ### For how many epochs to save training checkpoints?\n",
         "#@markdown The larger your dataset, you should set this saving interval to a smaller value, as epochs can progress longer time.\n",
-        "checkpoint_epochs = 5 #@param {type:\"integer\"}\n",
+        "checkpoint_epochs = 2 #@param {type:\"integer\"}\n",
         "#@markdown ---\n",
         "#@markdown ### Interval to save best k models:\n",
         "#@markdown Set to 0 if you want to disable saving multiple models. If this is the case, check the checkbox below. If set to 1, models will be saved with the file name epoch=xx-step=xx.ckpt, so you will need to empty Drive's trash every so often.\n",
-        "num_ckpt = 1 #@param {type:\"integer\"}\n",
+        "num_ckpt = 0 #@param {type:\"integer\"}\n",
         "#@markdown ---\n",
         "#@markdown ### Save latest model:\n",
         "#@markdown This checkbox must be checked if you want to save a single model (last.ckpt). Saving a single model is applied only if num_ckpt is equal to 0. If so, the interval parameter of epochs to save is ignored, since the last model per epoch is saved; also, you won't have to worry about storage. Being equal to 1, last.ckpt will be saved, but another model (model_vVersion.ckpt, the latter takes into account the epoch range you set), so you would have to empty the trash often.\n",
         "\n",
         "#@markdown **It's not recommended to use this option in extremely small datasets, since by saving the last model each epoch, this process will be very fast and the trainer will not be able to save the complete model, which would result in a corrupt last.ckpt.**\n",
-        "save_last = False # @param {type:\"boolean\"}\n",
+        "save_last = True # @param {type:\"boolean\"}\n",
         "#@markdown ---\n",
         "#@markdown ### Step interval to generate model samples:\n",
         "log_every_n_steps = 1000 #@param {type:\"integer\"}\n",
         "#@markdown ---\n",
         "#@markdown ### Training epochs:\n",
-        "max_epochs = 10000 #@param {type:\"integer\"}\n",
+        "max_epochs = 30000 #@param {type:\"integer\"}\n",
         "#@markdown ---"
       ]
     },
@@ -548,7 +548,7 @@
         "#@markdown ---\n",
         "#@markdown ### <font color=\"orange\">**Disable validation?**\n",
         "#@markdown By uncheck this checkbox, this will allow to train the full dataset, without using any audio files or examples as a validation set. So, it will not be able to generate audios on the tensorboard while it's training. It is recommended to disable validation on extremely small datasets.\n",
-        "validation = True #@param {type:\"boolean\"}\n",
+        "validation = False #@param {type:\"boolean\"}\n",
         "if validation:\n",
         "    validation_split = 0.01\n",
         "    num_test_examples = 1\n",
