--- a/imagegenerator.ipynb
+++ b/imagegenerator.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCy6Xkci6WjwIaNy/NpFJ9",
+      "toc_visible": true,
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -29,46 +31,129 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check GPU\n",
+        "#@title Import Google drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "!pip install -U xformers\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "r8BU9WBxmLyM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "_LBIkkERO-5C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Load Model\n",
         "import torch\n",
-        "if not torch.cuda.is_available():\n",
-        "    print(\"⚠️ GPU not enabled. Go to Runtime > Change runtime type > GPU\")\n",
-        "\n",
-        "# Install dependencies\n",
-        "!pip install --upgrade diffusers transformers accelerate ftfy scipy\n",
-        "\n",
-        "# Import pipeline\n",
+        "import random\n",
         "from diffusers import StableDiffusionXLPipeline\n",
         "from PIL import Image\n",
         "\n",
-        "# Set device\n",
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "torch_dtype = torch.float16 if device == \"cuda\" else torch.float32\n",
         "\n",
-        "# Load model\n",
-        "model_name = \"TheReprinter/WAI-NSFW-illustrious-SDXL\"\n",
-        "pipe = StableDiffusionXLPipeline.from_pretrained(model_name, torch_dtype=torch_dtype)\n",
-        "pipe = pipe.to(device)\n"
+        "safetensor_path = \"/content/drive/MyDrive/waiNSFWIllustrious_v150.safetensors\"\n",
+        "\n",
+        "pipe = StableDiffusionXLPipeline.from_single_file(\n",
+        "    safetensor_path,\n",
+        "    torch_dtype=torch_dtype\n",
+        ").to(device)\n",
+        "def image_grid(imgs, rows, cols):\n",
+        "    assert len(imgs) == rows * cols\n",
+        "    w, h = imgs[0].size\n",
+        "    grid = Image.new(\"RGB\", size=(cols * w, rows * h))\n",
+        "    for i, img in enumerate(imgs):\n",
+        "        grid.paste(img, box=(i % cols * w, i // cols * h))\n",
+        "    return grid\n",
+        "\n",
+        "pipe.enable_xformers_memory_efficient_attention()\n",
+        "pipe.enable_vae_slicing()\n",
+        "pipe.enable_sequential_cpu_offload()\n",
+        "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "r8BU9WBxmLyM",
-        "outputId": "f61d0937-a106-4174-debd-9d419666a1f7"
+        "id": "TQffshqinWLb"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "⚠️ GPU not enabled. Go to Runtime > Change runtime type > GPU\n",
-            "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# =========================\n",
+        "# Generation Settings\n",
+        "# =========================\n",
+        "prompt = \"lazypos, Hatsune Miku, neon, glowing, futuristic city\"  #@param {type:\"string\"}\n",
+        "negative_prompt = \"lazyneg, blurry, bad anatomy, low quality\"  #@param {type:\"string\"}\n",
+        "\n",
+        "aspect_ratios = {\n",
+        "    \"1024x1024\": (1024, 1024),\n",
+        "    \"1216x832\": (1216, 832),\n",
+        "    \"832x1216\": (832, 1216)\n",
+        "}\n",
+        "chosen_ratio = \"1216x832\"  #@param [\"1024x1024\", \"1216x832\", \"832x1216\"]\n",
+        "width, height = aspect_ratios[chosen_ratio]\n",
+        "\n",
+        "num_rows = 1  #@param {type:\"integer\"}\n",
+        "num_cols = 1  #@param {type:\"integer\"}\n",
+        "cfg_scale = 7  #@param {type:\"number\"}\n",
+        "steps = 30  #@param {type:\"integer\"}\n",
+        "seed = 0  #@param {type:\"integer\"}\n",
+        "\n",
+        "# =========================\n",
+        "# Generate Images\n",
+        "# =========================\n",
+        "all_images = []\n",
+        "for _ in range(num_rows):\n",
+        "    row_images = []\n",
+        "    for _ in range(num_cols):\n",
+        "        if seed and seed > 0:\n",
+        "            current_seed = seed\n",
+        "        else:\n",
+        "            current_seed = random.randint(0, 2**32 - 1)\n",
+        "\n",
+        "        generator = torch.Generator(device=device).manual_seed(current_seed)\n",
+        "\n",
+        "        result = pipe(\n",
+        "            prompt=[prompt],\n",
+        "            negative_prompt=[negative_prompt],\n",
+        "            width=width,\n",
+        "            height=height,\n",
+        "            num_inference_steps=steps,\n",
+        "            guidance_scale=cfg_scale,\n",
+        "            generator=generator\n",
+        "        )\n",
+        "\n",
+        "        img = result.images[0]\n",
+        "        row_images.append(img)\n",
+        "\n",
+        "    all_images.extend(row_images)\n",
+        "\n",
+        "grid = image_grid(all_images, rows=num_rows, cols=num_cols)\n",
+        "grid\n"
+      ],
+      "metadata": {
+        "id": "FtCwqNyjnYZF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "y6yOFNRGnb6F"
+      }
     }
   ]
 }
