--- a/webui.ipynb
+++ b/webui.ipynb
@@ -30,7 +30,8 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "from google.colab import userdata\n",
+        "token=userdata.get('token')\n",
         "!curl -sS https://bootstrap.pypa.io/get-pip.py | python3.10\n",
         "!python3.10 -m pip install --upgrade pip\n",
         "!python3.10 -m pip install matplotlib==3.7.5 gradio==3.44.0 timm==0.9.2 pydantic==1.10.12\n",
@@ -41,13 +42,10 @@
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui /content/stable-diffusion-webui\n",
         "%cd /content/stable-diffusion-webui\n",
         "!python3.10 -m pip install \"pytorch-lightning==1.9.5\"\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "waiNSFWIllustrious_v150 = \"/content/drive/MyDrive/waiNSFWIllustrious_v150.safetensors\"\n",
-        "realistic= \"/content/drive/MyDrive/models/realismIllustriousBy_v50FP16.safetensors\"\n",
         "!mkdir -p /content/stable-diffusion-webui/models/Stable-diffusion\n",
-        "!ln -s \"{waiNSFWIllustrious_v150}\" /content/stable-diffusion-webui/models/Stable-diffusion/waiNSFWIllustrious_v150.safetensors\n",
-        "!ln -s \"{realistic}\" /content/stable-diffusion-webui/models/Stable-diffusion/realismIllustriousBy_v50FP16.safetensors\n"
+        "!wget --header=\"Authorization: Bearer $token\" \"https://civitai.com/api/download/models/2167369?type=Model&format=SafeTensor&size=pruned&fp=fp16\" -O /content/stable-diffusion-webui/models/Stable-diffusion/waiNSFWIllustrious_v150.safetensors\n",
+        "!wget --header=\"Authorization: Bearer $token\" \"https://civitai.com/api/download/models/501240?type=Model&format=SafeTensor&size=full&fp=fp16\" -O /content/stable-diffusion-webui/models/Stable-diffusion/Realistic_Vision_V6_0_B1.safetensors\n",
+        "\n"
       ],
       "metadata": {
         "id": "HSPdACK_yOV7"
