--- a/comfyui with indextts2.ipynb
+++ b/comfyui with indextts2.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "USE_GOOGLE_DRIVE = False  #@param {type:\"boolean\"}\n",
         "UPDATE_COMFY_UI = False  #@param {type:\"boolean\"}\n",
-        "IndexTTS2 = True  #@param {type:\"boolean\"}\n",
+        "IndexTTS2 = False  #@param {type:\"boolean\"}\n",
         "WORKSPACE = 'ComfyUI'\n",
         "OPTIONS['USE_GOOGLE_DRIVE'] = USE_GOOGLE_DRIVE\n",
         "OPTIONS['UPDATE_COMFY_UI'] = UPDATE_COMFY_UI\n",
@@ -101,12 +101,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "dddddddddd",
-        "cellView": "form"
+        "cellView": "form",
+        "outputId": "ae5f7ae6-5f72-4ae7-eadb-a7117e8a399f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/ComfyUI/models/checkpoints\n",
+            "downloading waiNSFWIllustrious_v150\n",
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "100   514    0   514    0     0    681      0 --:--:-- --:--:-- --:--:--   680\n",
+            "Warning: Failed to create the file waiNSFWIllustrious_v150.safetensors: File \n",
+            "Warning: exists\n",
+            "  0     0    0     0    0     0      0      0 --:--:--  0:00:01 --:--:--     0\n",
+            "curl: (23) Failed writing header\n",
+            "Warning: Got more output options than URLs\n",
+            "downloading majicMIX \n",
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "100   501    0   501    0     0   1610      0 --:--:-- --:--:-- --:--:--  1610\n",
+            "Warning: Failed to create the file majicmixRealistic_v7.safetensors: File \n",
+            "Warning: exists\n",
+            "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+            "curl: (23) Failed writing header\n",
+            "Warning: Got more output options than URLs\n",
+            "/content/ComfyUI\n",
+            "/content/ComfyUI/models/loras\n",
+            "/content/ComfyUI\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "\n",
@@ -262,14 +295,7 @@
         "# ESRGAN upscale model\n",
         "#!wget -c https://github.com/xinntao/Real-ESRGAN/releases/download/v0.1.0/RealESRGAN_x4plus.pth -P ./models/upscale_models/\n",
         "#!wget -c https://huggingface.co/sberbank-ai/Real-ESRGAN/resolve/main/RealESRGAN_x2.pth -P ./models/upscale_models/\n",
-        "#!wget -c https://huggingface.co/sberbank-ai/Real-ESRGAN/resolve/main/RealESRGAN_x4.pth -P ./models/upscale_models/\n",
-        "\n",
-        "if wan2_2:\n",
-        "  !wget -c https://huggingface.co/QuantStack/Wan2.2-T2V-A14B-GGUF/resolve/main/HighNoise/Wan2.2-T2V-A14B-HighNoise-Q3_K_M.gguf -P ./models/unet/\n",
-        "  #!wget -c https://huggingface.co/QuantStack/Wan2.2-T2V-A14B-GGUF/resolve/main/LowNoise/Wan2.2-T2V-A14B-LowNoise-Q2_K.gguf -P ./models/unet/\n",
-        "  !wget -c https://huggingface.co/QuantStack/Wan2.2-T2V-A14B-GGUF/resolve/main/VAE/Wan2.1_VAE.safetensors -P ./models/vae/\n",
-        "  !wget -c https://huggingface.co/city96/umt5-xxl-encoder-gguf/resolve/main/umt5-xxl-encoder-Q3_K_M.gguf -P ./models/text_encoders/\n",
-        "  !wget -c https://huggingface.co/Kijai/WanVideo_comfy/resolve/main/Wan22-Lightning/Wan2.2-Lightning_T2V-v1.1-A14B-4steps-lora_LOW_fp16.safetensors -P ./models/loras/"
+        "#!wget -c https://huggingface.co/sberbank-ai/Real-ESRGAN/resolve/main/RealESRGAN_x4.pth -P ./models/upscale_models/\n"
       ]
     },
     {
@@ -277,20 +303,9 @@
       "execution_count": null,
       "metadata": {
         "id": "jjjjjjjjjjjjjj",
-        "outputId": "ea73c22a-565b-4524-b0cd-abeab2e001d0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "FETCH ComfyRegistry Data: 60/98\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@title # Start comfyui\n",
         "!wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb\n",
