--- a/wan22_video_generation_google_colab.ipynb
+++ b/wan22_video_generation_google_colab.ipynb
@@ -58,29 +58,6 @@
         "%cd /content/ComfyUI\n",
         "!apt -y install -qq aria2 ffmpeg\n",
         "clear_output()\n",
-        "print(\"✅ Environment Setup Complete!\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ys6-TUIGoVZJ",
-        "outputId": "31cd7c3e-147f-45fe-8b48-dc9b096f3a7c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Environment Setup Complete!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import os\n",
         "os.environ['PYTORCH_CUDA_ALLOC_CONF'] = 'expandable_segments:True'\n",
         "civitai_token = \"4b00b6113827e77bff1b052404c2f5be\"\n",
@@ -133,6 +110,30 @@
         "from comfy_extras.nodes_wan import WanImageToVideo\n",
         "from comfy_extras.nodes_upscale_model import UpscaleModelLoader\n",
         "from comfy_extras.nodes_hunyuan import EmptyHunyuanLatentVideo\n",
+        "\n",
+        "print(\"✅ Environment Setup Complete!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ys6-TUIGoVZJ",
+        "outputId": "31cd7c3e-147f-45fe-8b48-dc9b096f3a7c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Environment Setup Complete!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "\n",
         "def download_with_aria2c(link, folder=\"/content/ComfyUI/models/loras\"):\n",
@@ -828,23 +829,11 @@
         "print(\"✅ Wan 2.2 and Loras Installed!\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "cellView": "form",
-        "id": "YTfD3OgHpALT",
-        "outputId": "36884ecf-679e-4792-ba40-25c1219bc2bb"
+        "id": "YTfD3OgHpALT"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Wan 2.2 and Loras Installed!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -871,9 +860,7 @@
         "sampler_name = \"euler\" # @param [\"uni_pc\", \"uni_pc_bh2\", \"ddim\",\"euler\", \"euler_cfg_pp\", \"euler_ancestral\", \"euler_ancestral_cfg_pp\", \"heun\", \"heunpp2\",\"dpm_2\", \"dpm_2_ancestral\",\"lms\", \"dpm_fast\", \"dpm_adaptive\", \"dpmpp_2s_ancestral\", \"dpmpp_2s_ancestral_cfg_pp\", \"dpmpp_sde\", \"dpmpp_sde_gpu\",\"dpmpp_2m\", \"dpmpp_2m_cfg_pp\", \"dpmpp_2m_sde\", \"dpmpp_2m_sde_gpu\", \"dpmpp_3m_sde\", \"dpmpp_3m_sde_gpu\", \"ddpm\", \"lcm\",\"ipndm\", \"ipndm_v\", \"deis\", \"res_multistep\", \"res_multistep_cfg_pp\", \"res_multistep_ancestral\", \"res_multistep_ancestral_cfg_pp\",\"gradient_estimation\", \"er_sde\", \"seeds_2\", \"seeds_3\"]\n",
         "scheduler = \"simple\" # @param [\"simple\",\"normal\",\"karras\",\"exponential\",\"sgm_uniform\",\"ddim_uniform\",\"beta\",\"linear_quadratic\",\"kl_optimal\"]\n",
         "frames = 60 # @param {\"type\":\"integer\", \"min\":1, \"max\":120}\n",
-        "# fps = 16 # @param {\"type\":\"integer\", \"min\":1, \"max\":60}\n",
-        "fps = 16\n",
-        "# output_format = \"mp4\" # @param [\"mp4\", \"webm\"]\n",
+        "fps = 16 # @param {\"type\":\"integer\", \"min\":1, \"max\":60}\n",
         "output_format = \"mp4\"\n",
         "overwrite_previous_video = True # @param {type:\"boolean\"}\n",
         "\n",
@@ -957,24 +944,11 @@
         "clear_memory()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "cellView": "form",
-        "id": "AqcMR3p7sCpw",
-        "outputId": "b5f6fdf8-0074-4515-d242-2d5d520f7974"
+        "id": "AqcMR3p7sCpw"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Using seed: 51851858123\n",
-            "Loading Text_Encoder...\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
