--- a/comfyui with indextts2.ipynb
+++ b/comfyui with indextts2.ipynb
@@ -101,10 +101,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "dddddddddd",
-        "cellView": "form",
         "outputId": "ae5f7ae6-5f72-4ae7-eadb-a7117e8a399f",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,6 +155,7 @@
         "wan2_1 = False # @param {\"type\":\"boolean\"}\n",
         "realdream = False #@param {type:\"boolean\"}\n",
         "majicMIX= False #@param {type:\"boolean\"}\n",
+        "iNiverse= False #@param {type:\"boolean\"}\n",
         "# @markdown ---\n",
         "# @markdown # loras\n",
         "# @markdown ---\n",
@@ -202,6 +202,11 @@
         "if majicMIX :\n",
         "  print(\"downloading majicMIX \")\n",
         "  !curl -L -H \"Authorization: Bearer $civit\" -OJ \"https://civitai.com/api/download/models/176425?type=Model&format=SafeTensor&size=pruned&fp=fp16\" -o ./models/checkpoints/\n",
+        "if iNiverse:\n",
+        "  print(\"downloading iNiverse\")\n",
+        "  !curl -L -H \"Authorization: Bearer $civit\" -OJ \"https://civitai.com/api/download/models/1031531?type=Model&format=SafeTensor&size=full&fp=fp8\" -o ./models/checkpoints/\n",
+        "\n",
+        "\n",
         "\n",
         "%cd ../..\n",
         "\n",
